--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "react": "latest",
     "react-dom": "latest",
     "typescript": "latest",
-    "vocs": "latest"
+    "vocs": "1.0.0-alpha.62"
   }
 }
